# bazel-fundamentals

./: .gitignore  README.md
cpp-project/greeting/: BUILD.bazel  helloworld.cc
java-project/: BUILD.bazel  MODULE.bazel
java-project/src/main/java/com/dependency/: Salutations.java
java-project/src/main/java/com/example/: Greeting.java  ProjectRunner.java  Salutations.java
java-project/src/main/java/com/greeting/: Greeting.java  ProjectRunner.java
java-project/src/main/java/com/query/: Runner.java
java-project/src/main/java/com/query/customers/: BUILD.bazel  Gaurav.java  Keshav.java
java-project/src/main/java/com/query/dishes/: BUILD  HoneyChilliPotato.java  Rasmalai.java
java-project/src/main/java/com/query/ingredients/: BUILD  Salt.java  Tomato.java
java-project/src/main/java/com/query/restaurant/: BUILD  Chef.java  Starbucks.java  Udupi.java
java-project/src/main/java/com/query/reviews/: BUILD  Reviews.java
java-project/src/main/java/com/webclient/: RestClient.java
macros/: BUILD  code_dive.txt  everyone.txt
macros/hello-world/: BUILD  generator.bzl  generator.py
py-project/: WORKSPACE.bazel
py-project/app/: BUILD.bazel  main.py  requirements.txt
pythontoolchain/: BUILD  BUILD.dist.bazel.tpl  WORKSPACE  python_interpreter.bzl
rules/custom-rules/: BUILD  file.cc.tpl  foo.bzl  foo1.bzl
rules/gen-rules/: BUILD  bazel-gen-rules  process_data.py
