java_binary(
    name = "ProjectRunner",
    srcs = glob(["src/main/java/com/example/*.java"]),
    main_class = "main.java.com.example.ProjectRunner",
)
java_binary(
    name="salutations",
    main_class = "main.java.com.example.Salutations",
    runtime_deps = [":textio"],
    visibility = ["//visibility:public"],
)


java_library(
    name="textio",
    srcs = ["src/main/java/com/example/Salutations.java"],
    deps = ["@maven//:org_beryx_text_io"],
    #visibility = ["//src/main/java/com/example/cmdline:__pkg__"],
)